[package]
name = "bounce"
version = "0.1.0"
authors = ["Andrew Rondeau <git@andrewrondeau.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
rust-crypto = "0.2.36"
rand = "0.7.3"
rustc-serialize = "0.3.24"